--- a/Dockerfile.x86_64
+++ b/Dockerfile.x86_64
@@ -1,9 +1,26 @@
 FROM balenalib/intel-nuc-debian-python:3-build
-
 ENV DBUS_SYSTEM_BUS_ADDRESS unix:path=/host/run/dbus/system_bus_socket
 
+# Deprecated INITSYSTEM as of balenalib major changes
+# https://www.balena.io/docs/reference/base-images/base-images/#major-changes
+ENV INITSYSTEM OFF
+ENV UDEV on
+ARG DEFAULT_INTERFACE
+ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-wlan0}
+# RUN [ "cross-build-start" ]
+RUN install_packages \
+  bluez \
+  python3-networkmanager \
+  python3-gi \
+  python3-dbus \
+  python3-gpiozero \
+  libbluetooth-dev \
+  bluetooth \
+  dnsmasq
 WORKDIR /usr/src/app
-
 COPY . .
-RUN python3 -m pip install --upgrade pip -r config/requirements.txt 
+
+RUN [ "/bin/bash", "scripts/install.sh" ]
+# RUN [ "cross-build-end" ]
+RUN python3 -m pip install --upgrade pip -r config/requirements.txt
 CMD ["bash", "-c", "scripts/run.sh"]
