--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,9 +1,17 @@
 FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-python:3-build
 
 ENV DBUS_SYSTEM_BUS_ADDRESS unix:path=/host/run/dbus/system_bus_socket
+ARG DEFAULT_INTERFACE
+ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-"wlan0"}
+ARG DISABLE_HOTSPOT
+ENV DISABLE_HOTSPOT ${DISABLE_HOTSPOT:-0}
+ARG DEFAULT_GATEWAY
+ENV DEFAULT_GATEWAY ${DEFAULT_GATEWAY:-"192.168.42.1"}
+ARG DEFAULT_DHCP_RANGE
+ENV DEFAULT_DHCP_RANGE ${DEFAULT_DHCP_RANGE:-"192.168.42.2,192.168.42.254"}
 
 WORKDIR /usr/src/app
 
 COPY . .
-RUN python3 -m pip install --upgrade pip -r config/requirements.txt 
+RUN python3 -m pip install --upgrade pip -r config/requirements.txt
 CMD ["bash", "-c", "scripts/run.sh"]
