--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,5 +1,13 @@
 FROM balenalib/raspberrypi3-debian-python:3-build
 ENV DBUS_SYSTEM_BUS_ADDRESS unix:path=/host/run/dbus/system_bus_socket
+ARG DEFAULT_INTERFACE
+ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-"wlan0"}
+ARG DISABLE_HOTSPOT
+ENV DISABLE_HOTSPOT ${DISABLE_HOTSPOT:-0}
+ARG DEFAULT_GATEWAY
+ENV DEFAULT_GATEWAY ${DEFAULT_GATEWAY:-"192.168.42.1"}
+ARG DEFAULT_DHCP_RANGE
+ENV DEFAULT_DHCP_RANGE ${DEFAULT_DHCP_RANGE:-"192.168.42.2,192.168.42.254"}
 
 # Deprecated INITSYSTEM as of balenalib major changes
 # https://www.balena.io/docs/reference/base-images/base-images/#major-changes
