--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-python:3-stretch-build
+FROM balenalib/%%BALENA_MACHINE_NAME%%-ubuntu-python:3.6-bionic-build
 ENV DBUS_SYSTEM_BUS_ADDRESS unix:path=/host/run/dbus/system_bus_socket
 ARG DEFAULT_INTERFACE
 ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-"wlan0"}
@@ -17,11 +17,12 @@ ARG DEFAULT_INTERFACE
 ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-wlan0}
 # RUN [ "cross-build-start" ]
 RUN install_packages \
+  network-manager \
   bluez \
-  python3-networkmanager \
   python3-gi \
-  python3-dbus \
   python3-gpiozero \
+  python3-dbus \
+  python3-networkmanager \
   libbluetooth-dev \
   bluetooth \
   dnsmasq
@@ -31,3 +32,4 @@ COPY . .
 RUN [ "/bin/bash", "scripts/install.sh" ]
 # RUN [ "cross-build-end" ]
 CMD ["bash", "-c", "scripts/run.sh"]
+EXPOSE 8000
