--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -31,5 +31,5 @@ COPY . .
 
 RUN [ "/bin/bash", "scripts/install.sh" ]
 # RUN [ "cross-build-end" ]
-CMD ["bash", "-c", "scripts/run.sh"]
+CMD ["/bin/bash", "scripts/run.sh"]
 EXPOSE 8000
