--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,7 +5,7 @@ ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-"wlan0"}
 ARG DISABLE_HOTSPOT
 ENV DISABLE_HOTSPOT ${DISABLE_HOTSPOT:-1}
 ARG DEFAULT_GATEWAY
-ENV DEFAULT_GATEWAY ${DEFAULT_GATEWAY:-"192.168.42.1"}
+# ENV DEFAULT_GATEWAY ${DEFAULT_GATEWAY:-"192.168.42.1"}
 ARG DEFAULT_DHCP_RANGE
 ENV DEFAULT_DHCP_RANGE ${DEFAULT_DHCP_RANGE:-"192.168.42.2,192.168.42.254"}
 
