--- a/Dockerfile.x86_64
+++ b/Dockerfile.x86_64
@@ -1,5 +1,13 @@
-FROM balenalib/intel-nuc-debian-python:3-build
+FROM balenalib/intel-nuc-ubuntu-python:3.6-bionic-build
 ENV DBUS_SYSTEM_BUS_ADDRESS unix:path=/host/run/dbus/system_bus_socket
+ARG DEFAULT_INTERFACE
+ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-"wlan0"}
+ARG DISABLE_HOTSPOT
+ENV DISABLE_HOTSPOT ${DISABLE_HOTSPOT:-1}
+ARG DEFAULT_GATEWAY
+# ENV DEFAULT_GATEWAY ${DEFAULT_GATEWAY:-"192.168.42.1"}
+ARG DEFAULT_DHCP_RANGE
+ENV DEFAULT_DHCP_RANGE ${DEFAULT_DHCP_RANGE:-"192.168.42.2,192.168.42.254"}
 
 # Deprecated INITSYSTEM as of balenalib major changes
 # https://www.balena.io/docs/reference/base-images/base-images/#major-changes
@@ -9,11 +17,12 @@ ARG DEFAULT_INTERFACE
 ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-wlan0}
 # RUN [ "cross-build-start" ]
 RUN install_packages \
+  network-manager \
   bluez \
-  python3-networkmanager \
   python3-gi \
-  python3-dbus \
   python3-gpiozero \
+  python3-dbus \
+  python3-networkmanager \
   libbluetooth-dev \
   bluetooth \
   dnsmasq
@@ -22,5 +31,5 @@ COPY . .
 
 RUN [ "/bin/bash", "scripts/install.sh" ]
 # RUN [ "cross-build-end" ]
-RUN python3 -m pip install --upgrade pip -r config/requirements.txt
-CMD ["bash", "-c", "scripts/run.sh"]
+CMD ["/bin/bash", "scripts/run.sh"]
+EXPOSE 8000
