--- a/Dockerfile.x86_64
+++ b/Dockerfile.x86_64
@@ -1,7 +1,10 @@
 FROM balenalib/intel-nuc-ubuntu-python:3.6-bionic-build
-ENV DBUS_SYSTEM_BUS_ADDRESS unix:path=/host/run/dbus/system_bus_socket
-ARG DEFAULT_INTERFACE
-ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-"wlan0"}
+ENV DBUS_SYSTEM_BUS_ADDRESS="unix:path=/host/run/dbus/system_bus_socket"
+
+ARG BT_BLE
+ENV BT_BLE ${BT_BLE:-1}
+ARG BT_SCAN_TIMEOUT
+ENV BT_SCAN_TIMEOUT ${BT_SCAN_TIMEOUT:-2}
 ARG DISABLE_HOTSPOT
 ENV DISABLE_HOTSPOT ${DISABLE_HOTSPOT:-1}
 ARG DEFAULT_GATEWAY
@@ -20,16 +23,31 @@ RUN install_packages \
   network-manager \
   bluez \
   python3-gi \
-# # # ### ARM BEGIN
-#   python3-gpiozero \
-# # # ### ARM END
+### ARM BEGIN
+  python3-gpiozero \
+### ARM END
   python3-dbus \
   python3-networkmanager \
   libbluetooth-dev \
   bluetooth \
   dnsmasq
+
+WORKDIR /usr/src
+
+COPY bluetooth-scripts bluetooth-scripts
+
 WORKDIR /usr/src/app
+
 COPY . .
+
+# Bluetooth Low Energy through GATTLIB and gattlib (Experimental)
+RUN if [ "$BT_BLE" = 1 ]; then printf "pygattlib" | tee -a config/requirements.txt \
+&& install_packages \
+  pkg-config \
+  libboost-python-dev \
+  libboost-thread-dev \
+  libglib2.0-dev \
+  python3-dev; fi
 
 RUN [ "/bin/bash", "scripts/install.sh" ]
 # RUN [ "cross-build-end" ]
