--- a/Dockerfile.armhf.x86
+++ b/Dockerfile.armhf.x86
@@ -11,13 +11,13 @@ ARG DEFAULT_DHCP_RANGE
 ENV DEFAULT_DHCP_RANGE ${DEFAULT_DHCP_RANGE:-"192.168.42.2,192.168.42.254"}
 
 WORKDIR /usr/src/app
-RUN [ "cross-build-start" ]
+# RUN [ "cross-build-start" ]
 RUN install_packages \
   network-manager \
   python3-networkmanager
 COPY . .
 
 RUN [ "/bin/bash", "scripts/install.sh" ]
-RUN [ "cross-build-end" ]
+# RUN [ "cross-build-end" ]
 
 CMD ["bash", "-c", "scripts/run.sh"]
