--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -18,7 +18,7 @@ ENV INITSYSTEM OFF
 ENV UDEV on
 ARG DEFAULT_INTERFACE
 ENV DEFAULT_INTERFACE ${DEFAULT_INTERFACE:-wlan0}
-# RUN [ "cross-build-start" ]
+RUN [ "cross-build-start" ]
 RUN install_packages \
   network-manager \
   bluez \
@@ -49,7 +49,8 @@ RUN if [ "$BT_BLE" = 1 ]; then printf "pygattlib" | tee -a config/requirements.t
   libglib2.0-dev \
   python3-dev; fi
 
-RUN [ "/bin/bash", "scripts/install.sh" ]
-# RUN [ "cross-build-end" ]
-CMD ["/bin/bash", "scripts/run.sh"]
+RUN chmod +x scripts/*
+RUN scripts/install.sh
+RUN [ "cross-build-end" ]
+CMD scripts/run.sh
 EXPOSE 80
